@@ -1,5 +1,2 @@
 ^.*\.Rproj$
 ^\.Rproj\.user$
-index\.html
-^\.travis\.yml$
-cran\-comments\.md
