@@ -2,4 +2,3 @@
 .Rhistory
 .RData
 .Ruserdata
-inst/doc
