@@ -1,7 +1,7 @@
 Package: testassay
 Type: Package
 Title: A Hypothesis Testing Framework for Validating an Assay for Precision
-Version: 0.1.0
+Version: 0.1.1
 Author: Michael C Sachs and Michael P Fay
 Maintainer: Michael C Sachs <sachsmc@gmail.com>
 Description: A common way of validating a biological assay for is through a
@@ -18,14 +18,15 @@ Description: A common way of validating a biological assay for is through a
     of log(y) plus or minus r, which is a 68% confidence interval on log(mu), where
     mu is the expected value of the assay output for that sample. Further, the m:n:q
     procedure can be straightforwardly applied to constant standard deviation assays.
-    We illustrate these tools by applying them to a growth inhibition assay.
+    We illustrate these tools by applying them to a growth inhibition assay. This is
+    an implementation of the methods described in Fay, Sachs, and Miura (2018) 
+    <doi:10.1002/sim.7528>.
 License: MIT + file LICENSE
 LazyData: TRUE
-Depends: R (>= 2.10)
+Depends: R (>= 3.5.0)
 Suggests:
     knitr,
     rmarkdown,
-    ggplot2,
-    dplyr
+    ggplot2
 VignetteBuilder: knitr
-RoxygenNote: 5.0.1
+RoxygenNote: 7.1.0
