@@ -1,1 +1,5 @@
-This is a resubmission to CRAN. I fixed the spelling errors in the description file. 
+This is a resubmission to CRAN. I fixed the warning caused by an old version of dplyr. Checked on the following platforms and versions: 
+
+- Windows 10, R release and devel
+- Ubuntu 12.40, 
+- Mac OS
